application/brennoflavio/registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: registry
