application/brennoflavio/registry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: registry.brennoflavio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
  tls:
    - hosts:
        - registry.brennoflavio.com.br
      secretName: registry-tls
